--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -1,43 +1,42 @@
 ---
 import Layout from '../../layouts/Layout.astro';
 import Container from '../../components/Container.astro';
-
+import FormattedDate from '../../components/FormattedDate.astro';
 import Pagination from "../../components/Pagination.astro";
+import { Debug } from 'astro:components';
 
-// utils imports
-import { formatBlogPosts } from "../../config/utils";
-
-
-
+import { getCollection, getEntry } from 'astro:content';
 export async function getStaticPaths({ paginate }) {
-	const allPosts = await Astro.glob("./*.md");
-  	const formattedPosts = formatBlogPosts(allPosts);
-
-  return paginate(formattedPosts, {
-    pageSize: 3,
-  });
+	const allBlogPosts = (await getCollection('blog'))
+  	.sort((a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()).reverse();
+  	
+	// Return a paginated collection of paths for all posts
+  	return paginate(allBlogPosts, { pageSize: 6 });
 }
 
+// If set up correctly, The page prop now has everything that
+// you need to render a single page (see next section).
 const { page } = Astro.props;
-
 ---
-
+<!-- <Debug {page}> -->
 <Layout title="Blog | t2del" meta_description="Blog | My Blog" body_class="blog index something you wish to add for any use">
 	<section>
-		<Container className="custom-class">
+		<Container className="container-blog">
 			<h2 class="notshow fromleft"> <span class="text-gradient">Blog</span></h2>
-			<ul role="list" class="link-card-grid">
+			<ul role="list" class="link-card-grid grid-3">
 				{
 					page.data.map((post) => ( 					
 						<li class="notshow fromtop">
-							<a href={post.url}>
-								<img  src={post.frontmatter.heroImage} alt={post.frontmatter.imgalt} title={post.frontmatter.imgalt} />
-								
-								<h4 class="title">{post.frontmatter.title}</h4>
+							<a href={`/t2delastro/blog/${post.slug}/`}>
+								<img  src={post.data.heroImage} alt={post.data.imgalt} title={post.data.imgalt} />
+								<h4 class="title">{post.data.title}</h4>
+								<p class="date">
+									<FormattedDate date={post.data.pubDate} />
+								</p>
 							</a>							
 						</li>
 					))
-				  }
+				}
 			</ul>
 			<Pagination prevUrl={page.url.prev} nextUrl={page.url.next} />
 		</Container>			
