--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -13,11 +13,8 @@ type Props = CollectionEntry<'blog'>['data'];
 const { title, description, pubDate, updatedDate, heroImage, imgalt } = Astro.props;
 
 ---
-<article>
-	<div class="hero-image notshow blur">
-		{heroImage && <img width={1920} height={750} src={heroImage} alt={imgalt} loading="lazy"/>}
-	</div>
-	<Container className="custom-class">
+<article>	
+	<Container className="blog-container">
 		<div class="prose">
 			<div class="title">
 				<div class="date">
@@ -32,6 +29,9 @@ const { title, description, pubDate, updatedDate, heroImage, imgalt } = Astro.pr
 				</div>
 				<h1>{title}</h1>
 				<hr />
+				<div class="hero-image notshow blur">
+					{heroImage && <img width={1920} height={750} src={heroImage} alt={imgalt} loading="lazy"/>}
+				</div>
 			</div>
 			<slot />
 		</div>
