fix vew-transition, fix seo meta data

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,11 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Container from '../components/Container.astro';
-import { getCollection } from 'astro:content';
 import { Image } from "astro:assets"
 ---
 
-<Layout title="About | t2del" meta_description="About t2del - description" body_class="about index something you wish to add for any use">
+<Layout title="About | t2del" meta_description="About t2del" body_class="about-us">
 	<section>
 		<Container className="custom-class">
 			<h2 class="notshow fromleft">About <span class="text-gradient">T2del</span></h2>
