--- a/src/pages/blog/404.astro
+++ b/src/pages/blog/404.astro
@@ -2,7 +2,7 @@
 import Layout from '../../layouts/Layout.astro';
 ---
 
-<Layout title="t2del | 404" meta_description="404 Not Found" body_class="home index something you wish to add for any use">	
+<Layout title="404 | Blog | t2del" meta_description="404 Not Found" body_class="blog 404 not-found">	
 	<section class="section-404">
 		<div class="hero-section__text">
 			<h1>404</h1>
