--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -19,7 +19,7 @@ export async function getStaticPaths({ paginate }) {
 const { page } = Astro.props;
 ---
 <!-- <Debug {page}> -->
-<Layout title="Blog | t2del" meta_description="Blog | My Blog" body_class="blog index something you wish to add for any use">
+<Layout title="Blog | t2del" meta_description="Blog | My Blog" body_class="blog-list">
 	<section>
 		<Container className="container-blog">
 			<h2 class="notshow fromleft"> <span class="text-gradient">Blog</span></h2>
