--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import { Debug } from 'astro:components';
 
 ---
 
-<Layout title="t2del" meta_description="t2del - meta description" body_class="home index something you wish to add for any use">
+<Layout title="t2del" meta_description="t2del" body_class="home">
 	<HomeHeroSection />
 	<section id="about">
 		<Container className="container-about">
