--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -14,7 +14,7 @@ import { Debug } from 'astro:components';
 	.sort((a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf());
 ---
 
-<Layout title="Portfolio | t2del" meta_description="Portfolio | t2del - meta description" body_class="portfolio index something you wish to add for any use">
+<Layout title="Portfolio | t2del" meta_description="Portfolio | t2del" body_class="portfolio">
 		<section>			
 			<Container className="custom-class">
 				<h2 class="notshow fromleft"> <span class="text-gradient">Portfolio</span></h2>
