--- a/src/components/head/BaseHead.astro
+++ b/src/components/head/BaseHead.astro
@@ -2,7 +2,7 @@
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
 import 'font-awesome/css/font-awesome.min.css';
-
+import { ViewTransitions } from 'astro:transitions';
 
 interface Props {
 	title: string;
@@ -11,7 +11,6 @@ interface Props {
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
-
 const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 ---
 
@@ -21,9 +20,6 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <link rel="icon" type="image/svg+xml" href="/t2delastro/favicon.ico" />
 <meta name="generator" content={Astro.generator} />
 
-<!-- Font preloads -->
-<!-- <link rel="preload" href="/fonts/atkinson-regular.woff" as="font" type="font/woff" crossorigin />
-<link rel="preload" href="/fonts/atkinson-bold.woff" as="font" type="font/woff" crossorigin /> -->
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
@@ -55,3 +51,5 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 		// <!-- paste GA4 Tracking here -->
 	}, ); 
 </script>
+
+<ViewTransitions></ViewTransitions>
