--- a/src/pages/.....blog.astro
+++ b/src/pages/.....blog.astro
@@ -27,7 +27,7 @@ const { page } = Astro.props;
 ---
 
 <!-- <Debug {page}/> -->
-<Layout title="Blog | t2del" meta_description="Blog | My Blog" body_class="blog index something you wish to add for any use">
+<Layout title="Blog | t2del" meta_description="Blog | My Blog" body_class="blog">
 	<section>
 		<Container className="custom-class">
 			<h2 class="notshow fromleft"> <span class="text-gradient">Blog</span></h2>
