--- a/src/pages/contact-us.astro
+++ b/src/pages/contact-us.astro
@@ -20,7 +20,7 @@ if (Astro.request.method === "POST") {
 ---
 
 
-<Layout title="t2del" meta_description="t2del - meta description" body_class="home index something you wish to add for any use">
+<Layout title="Contact Us | t2del" meta_description="t2del" body_class="contact-us">
 	<section id="portfolio">			
 		<Container className="custom-class">
 			
