--- a/src/components/head/BaseHead.astro
+++ b/src/components/head/BaseHead.astro
@@ -11,8 +11,10 @@ interface Props {
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
-const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
+const { title, description, image = '/favicon.ico' } = Astro.props;
 ---
+
+<ViewTransitions></ViewTransitions>
 
 <!-- Global Metadata -->
 <meta charset="utf-8" />
@@ -47,9 +49,8 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <script type="module" >
 	document.addEventListener('astro:page-load', () => {
 		// <!-- paste GA4 Tracking here -->
-
+		console.log('paste GA4 Tracking here ');
 		// <!-- paste GA4 Tracking here -->
 	}, ); 
 </script>
 
-<ViewTransitions></ViewTransitions>
