--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const { title, meta_description, body_class } = Astro.props;
 <!doctype html>
 <html lang="en">
 	<head>
-		<BaseHead title={title} description={meta_description} image="t2delastro/t2delastro-thumbnail.png" />				
+		<BaseHead title={title} description={meta_description} image="/t2delastro-thumbnail.png" />				
 	</head>
 
 	<body class={body_class}>
