contact form container and footer container fix styling

--- a/src/pages/contact-us.astro
+++ b/src/pages/contact-us.astro
@@ -34,7 +34,7 @@ if (Astro.request.method === "POST") {
 <style>
 	.feedback-form {
 	margin: 0 auto;
-	widows: 100%;
+	width: 100%;
 	min-width: 250px;
 	max-width: 450px;
   }
