--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,8 +5,11 @@ import HomeHeroSection from '../components/sections/heros/HomeHeroSection.astro'
 import { getCollection, getEntry } from 'astro:content';
 import FormattedDate from '../components/FormattedDate.astro';
 import CustomModal from '../components/Modal.astro';
+// import CustomModal from '../components/ModalButton.astro';
 import { Image } from "astro:assets"
 import { Debug } from 'astro:components';
+import { ViewTransitions, fade, slide } from 'astro:transitions';
+
 	const posts_blog = (await getCollection('blog'))
 	.filter(post => post.data.status == 'active') // Filter out active posts
   	.sort((a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()).reverse()
@@ -67,6 +70,20 @@ import { Debug } from 'astro:components';
 						<li class="notshow blur portfolio-list">
 							<CustomModal title={post.data.title} slug={post.slug} classText="animate_underline" imgsrc={post.data.heroImage}  />
 						</li>
+						<div id={post.slug} class="modal">						
+								<div class="modal-content" transition:animate={slide({ duration: '0.4s' })}>						
+									<div class="modal-grid">
+										
+										<div class="description">
+											<p>{post.data.title}</p>
+											<div>Role: <span>{post.data.role}</span></div>
+											<div>Platform: <span>{post.data.platform}</span></div>
+											<a href={post.data.siteUrl} rel="noopener noreferrer"><span>Visit Site</span></a>
+										</div>
+										<div class="img"><img  src={post.data.heroImage} alt={post.data.title}  title={post.data.title} /></div>
+									</div>
+								</div>
+							</div>
 					))
 				}
 			</ul>
@@ -78,6 +95,20 @@ import { Debug } from 'astro:components';
 							<li class="notshow blur portfolio-list">
 							<CustomModal title={post.data.title} slug={post.slug} classText="animate_underline" imgsrc={post.data.heroImage} />
 							</li>
+							<div id={post.slug} class="modal">						
+								<div class="modal-content" transition:animate={slide({ duration: '0.4s' })}>						
+									<div class="modal-grid">
+										
+										<div class="description">
+											<p>{post.data.title}</p>
+											<div>Role: <span>{post.data.role}</span></div>
+											<div>Platform: <span>{post.data.platform}</span></div>
+											<a href={post.data.siteUrl} rel="noopener noreferrer"><span>Visit Site</span></a>
+										</div>
+										<div class="img"><img  src={post.data.heroImage} alt={post.data.title}  title={post.data.title} /></div>
+									</div>
+								</div>
+							</div>
 						);
 						}
 						return null;
@@ -85,25 +116,6 @@ import { Debug } from 'astro:components';
 					}
 			</ul>						
 		</Container>
-		{
-			posts_project.map((post) => (
-				<div id={post.slug} class="modal">						
-					<div class="modal-content">						
-						<div class="modal-grid">
-							
-							<div class="description">
-								<p>{post.data.title}</p>
-								<div>Role: <span>{post.data.role}</span></div>
-								<div>Platform: <span>{post.data.platform}</span></div>
-								<a href={post.data.siteUrl} rel="noopener noreferrer"><span>Visit Site</span></a>
-							</div>
-							<div class="img"><img  src={post.data.heroImage} alt={post.data.title}  title={post.data.title} /></div>
-						</div>
-					</div>
-				</div>
-				// 
-			))
-		}					
 	</section>
 
 	<section id="blog">
