--- a/src/components/Modal.astro
+++ b/src/components/Modal.astro
@@ -29,52 +29,19 @@ const { title = 'Welcome, world!', slug, classContainer = '', classText = '', im
         var libutton = document.getElementById('btn-modal-'+slug);
         
         button.addEventListener('click', () => {
-            modal.classList.add("modalshow");
-            libutton.classList.add("hidethis");
+            modal.classList.add("modal-show");
+            // modal.classList.add("modalshow");
+            // libutton.classList.add("hidethis");
         });
         // Add a click event listener to the window when the modal is active, add close modal action
         window.addEventListener('click', function(event) {
             if (event.target.id) {  
-                event.target.classList.remove('modalshow');
-                libutton.classList.remove('hidethis');
+                event.target.classList.remove('modal-show');
+                // event.target.classList.remove('modalshow');
+                // libutton.classList.remove('hidethis');
             }
         });
     }
   }
   customElements.define('astro-greet', AstroGreet);
 </script>
-
-<style>
- 
-  .btn-modal {
-    text-align: left;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    width: 100%;
-    border-radius: 10px;
-    overflow: hidden;
-    border: none;
-    box-shadow: 1px 1px 5px 1px #00000080;
-    cursor: pointer;
-    transform: scale(1);
-    transition: all 300ms ease-in;
-  }
-  .btn-modal img {
-    /* aspect-ratio: 8 / 4; */
-    width: 100%;
-    height: 150px;
-    object-fit: cover;
-  }
-  .btn-modal h4 {
-    display: inline;
-    margin: 10px;
-    font-size: var(--font-size-sm);
-  }
-
-  .hidethis {
-    opacity: 0;
-    transform: scale(1.3);
-  }
-</style>
