--- a/src/components/ModalButton.astro
+++ b/src/components/ModalButton.astro
@@ -5,13 +5,12 @@ const { title = 'Welcome, world!', slug, classContainer = '', classText = '', im
 
 <!-- Store the message prop as a data attribute. -->
 <astro-greet data-message={title} data-slug={slug}>
-  <button class={`btn-modal ${classContainer}`} id={`btn-modal-${slug}`}>
-    <div class="modal-container">
-      <img  src={imgsrc} alt={title}  title={title} class="" />
-      <h4 class={`title ${classText}`}>{title}</h4>
-    </div>
-      
-  </button>
+  <div class="modal-container"  id={`btn-modal-${slug}`}>
+    <button class={`btn-modal ${classContainer}`}>
+        <img  src={imgsrc} alt={title}  title={title} class="" />
+        <h4 class={`title ${classText}`}>{title}</h4>  
+    </button>
+  </div>
 </astro-greet>
 
 
@@ -24,18 +23,21 @@ const { title = 'Welcome, world!', slug, classContainer = '', classText = '', im
       // Read the message from the data attribute.
       const title = this.dataset.title;
       const slug = this.dataset.slug;
-      const button = this.querySelector('button');
+        const button = this.querySelector('button');
 
         // Get the modal
         var modal = document.getElementById(slug);
+        var libutton = document.getElementById('btn-modal-'+slug);
         
         button.addEventListener('click', () => {
-            modal.classList.add("modal-show");
+            modal.classList.add("modalshow");
+            libutton.classList.add("hidethis");
         });
         // Add a click event listener to the window when the modal is active, add close modal action
         window.addEventListener('click', function(event) {
             if (event.target.id) {  
-                event.target.classList.remove('modal-show');
+                event.target.classList.remove('modalshow');
+                libutton.classList.remove('hidethis');
             }
         });
     }
@@ -44,6 +46,7 @@ const { title = 'Welcome, world!', slug, classContainer = '', classText = '', im
 </script>
 
 <style>
+ 
   .btn-modal {
     text-align: left;
     padding: 0;
@@ -56,18 +59,8 @@ const { title = 'Welcome, world!', slug, classContainer = '', classText = '', im
     border: none;
     box-shadow: 1px 1px 5px 1px #00000080;
     cursor: pointer;
-  }
-  .btn-modal.modal-show {
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0 0 0 / 57%);
-    opacity: 0;
-    transition: opacity 300ms ease-in;
+    transform: scale(1);
+    transition: all 300ms ease-in;
   }
   .btn-modal img {
     /* aspect-ratio: 8 / 4; */
@@ -81,5 +74,8 @@ const { title = 'Welcome, world!', slug, classContainer = '', classText = '', im
     font-size: var(--font-size-sm);
   }
 
-  
+  .hidethis {
+    opacity: 0;
+    transform: scale(1.3);
+  }
 </style>
