--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -208,6 +208,33 @@ span {
 
 
 
+.btn-modal {
+    text-align: left;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+    border-radius: 10px;
+    overflow: hidden;
+    border: none;
+    box-shadow: 1px 1px 5px 1px #00000080;
+    cursor: pointer;
+    transition: all 300ms ease-in;
+  }
+  .btn-modal img {
+    /* aspect-ratio: 8 / 4; */
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+  }
+  .btn-modal h4 {
+    display: inline;
+    margin: 10px;
+    font-size: var(--font-size-sm);
+  }
+
+
 .modal {
 	position: fixed; /* Stay in place */
 	z-index: 1; /* Sit on top */
@@ -245,6 +272,35 @@ span {
 }
 .modal.modalshow .modal-content {
 	top: 50%;
+}
+.modal-show {
+	position: fixed; /* Stay in place */
+	z-index: 1; /* Sit on top */
+	left: 0;
+	top: 0;
+	width: 100%; /* Full width */
+	height: 100%; /* Full height */
+	overflow: auto; /* Enable scroll if needed */
+	background-color: rgb(0 0 0 / 57%); /* Black w/ opacity */
+}
+.modal-show .btn-modal {
+	background-color: #fefefe;	
+	box-shadow: 5px 5px 10px 0px rgb(0 0 0 / 61%);
+	max-width: 900px;
+	width: 95%;
+	position: absolute;
+	left: 50%;
+	top: 40%;
+	transform: translate(-50%,-50%);
+	transition: all 200ms ease-in;
+	border-radius: 10px;
+	overflow: hidden;
+}
+
+.modal-show .btn-modal img {
+	width: 100%;
+    height: 300px;
+    object-fit: cover;
 }
 
 main {
@@ -324,4 +380,8 @@ nav.pagination-blog a svg {
 }
 nav.pagination-blog a:hover svg {
 	transform: scale(1.2);
+}
+
+section {
+	overflow: hidden;
 }
