--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -21,7 +21,7 @@ import { Debug } from 'astro:components';
 				<ul role="list" class="link-card-grid featured">
 					{
 						posts_project_featured.map((post) => (
-							<li class="notshow blur portfolio-list">
+							<li class="notshow blur portfolio-list"  id={post.slug}>
 								<CustomModal title={post.data.title} slug={post.slug} classText="animate_underline" imgsrc={post.data.heroImage}  />
 							</li>
 						))
@@ -33,34 +33,15 @@ import { Debug } from 'astro:components';
 						posts_project.map((post) => {
 						  if (post.data.status == 'active') {
 							return (
-							  <li class="notshow blur portfolio-list">
-								<CustomModal title={post.data.title} slug={post.slug} classText="animate_underline" imgsrc={post.data.heroImage} />
-							  </li>
+								<li class="notshow blur portfolio-list"  id={post.slug}>
+									<CustomModal title={post.data.title} slug={post.slug} classText="animate_underline" imgsrc={post.data.heroImage}  />
+								</li>
 							);
 						  }
 						  return null;
 						})
 					  }
 				</ul>	
-				{
-					posts_project.map((post) => (
-						<div id={post.slug} class="modal">						
-							<div class="modal-content">
-								<div class="modal-grid">
-									
-									<div class="description">
-										<p>{post.data.title}</p>
-										<div>Role: <span>{post.data.role}</span></div>
-										<div>Platform: <span>{post.data.platform}</span></div>
-										<a href={post.data.siteUrl} rel="noopener noreferrer"><span>Visit Site</span></a>
-									</div>
-									<div class="img"><img  src={post.data.heroImage} alt={post.data.title}  title={post.data.title} /></div>
-								</div>
-							</div>
-						</div>
-						// 
-					))
-				}
 			</Container>	
 		</section>	
 </Layout>
