--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -4,22 +4,22 @@ import { type CollectionEntry, getCollection } from 'astro:content';
 import BlogPost from '../layouts/BlogPost.astro';
 import { Debug } from 'astro:components';
 
-const { slug } = Astro.params;
+// const { slug } = Astro.params;
 
-let res = await fetch(`http://localhost/wpreact/wp-json/wp/v2/pages?slug=${slug}`)
-let [post] = await res.json();
+// let res = await fetch(`http://localhost/wpreact/wp-json/wp/v2/pages?slug=${slug}`)
+// let [post] = await res.json();
 
-// The getStaticPaths() is required for static Astro sites.
-// If using SSR, you will not need this function.
-export async function getStaticPaths() {
-  let data = await fetch("http://localhost/wpreact/wp-json/wp/v2/pages")
-  let posts = await data.json();
+// // The getStaticPaths() is required for static Astro sites.
+// // If using SSR, you will not need this function.
+// export async function getStaticPaths() {
+//   let data = await fetch("http://localhost/wpreact/wp-json/wp/v2/pages")
+//   let posts = await data.json();
 
-  return posts.map((post) => ({
-    params: { slug: post.slug },
-    props: { post: post },
-  }));
-}
+//   return posts.map((post) => ({
+//     params: { slug: post.slug },
+//     props: { post: post },
+//   }));
+// }
 
 ---
 <script type="module" src="https://code.jquery.com/jquery-3.7.1.min.js">
@@ -38,13 +38,13 @@ export async function getStaticPaths() {
 		});	
 	});		
 </script>
-<Layout title={`${post.title.rendered} | t2del` } meta_description={post.title.rendered} > 
-	<!-- <BlogPost {...post.data}> -->
+<!-- <Layout title={`${post.title.rendered} | t2del` } meta_description={post.title.rendered} > 
+	 <BlogPost {...post.data}> -->
 		<!-- <Content /> -->
 	<!-- </BlogPost> -->
-	<section>
+	<!-- <section>
 		<Fragment set:html={post.content.rendered} />
-	</section>
+	</section> -->
 	
-</Layout>
+<!-- </Layout> -->
 
