--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,10 +1,10 @@
 ---
 import '../styles/index.css';
 
-import BaseHead from '../components/head/BaseHead.astro';
+import BaseHead from './BaseHead.astro';
 import { nav } from '../config/nav.js';
-import Header from '../components/head/Header.astro';
-import Footer from '../components/head/Footer.astro';
+import Header from './Header.astro';
+import Footer from './Footer.astro';
 import Logo from '../components/Logo.astro';
 
 interface Props {
@@ -16,7 +16,7 @@ const { title, meta_description, body_class } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" >
 	<head>
 		<BaseHead title={title} description={meta_description} image="/t2delastro/t2delastro-thumbnail.png" />				
 	</head>
