--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -2,17 +2,64 @@ footer {
 	  background-color: #fafafa;
     border-top: 1px solid #f3f3f3;
     border-bottom: 1px solid #f3f3f3;
-    padding: 20px 0;
+    padding: 10px 0;
 }
 footer .content__container.container-footer{
   padding: 10px 10px;
+  margin: 0 auto;
 }
 footer .content__container {
-	  display: flex;
-    justify-content: space-between;
-    align-items: baseline;
+	
 }
 
 footer .content__container.container-footer{
   padding: 10px 10px;
+}
+
+footer .social-links {
+	padding: 0;
+	list-style: none;
+	margin: 0 0;
+  display: flex;
+  justify-content: center;
+}
+footer .social-links li {
+	margin: 10px 10px 10px 10px;
+	display: inline-block;
+	font-size: 40px;
+}
+footer .social-links li a {
+	color: var(--theme-on-bg);
+	-webkit-transition: all 0.2s ease-in-out;
+	-moz-transition: all 0.2s ease-in-out;
+	-o-transition: all 0.2s ease-in-out;
+	-ms-transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
+}
+footer .social-links li.twitter a:hover {
+	color: #55acee;
+}
+footer .social-links li.skype a:hover {
+	color: #00aff0;
+}
+footer .social-links li.linkedin a:hover {
+	color: #0976b4;
+}
+footer .social-links li.googleplus a:hover {
+	color: #dd4b39;
+}
+footer .social-links li.youtube a:hover {
+	color: #b31217;
+}
+footer .social-links li.flickr a:hover {
+	color: #ff0084;
+}
+footer .social-links li.facebook a:hover {
+	color: #3b5998;
+}
+footer .social-links li.pinterest a:hover {
+	color: #cb2027;
+}
+footer .social-links li.whatsapp a:hover {
+	color: #25d366;
 }
