--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -132,3 +132,7 @@ blockquote {
 	padding-left: 1.5rem;
 	border-left: 0.25rem solid var(--theme-on-bg);
 }
+
+.text-center {
+  text-align: center;
+}
