--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -143,9 +143,9 @@ span {
     border-radius: 10px;
     overflow: hidden;
     border: none;
-    box-shadow: 1px 1px 5px 1px #00000080;
+    box-shadow: 3px 3px 3px #ccc;
     cursor: pointer;
-    transition: all 300ms ease-in;
+    transition: all 100ms ease-in;
   }
   .btn-modal img {
     /* aspect-ratio: 8 / 4; */
@@ -158,7 +158,10 @@ span {
     margin: 10px;
     font-size: var(--font-size-sm);
   }
-
+.btn-modal:hover {
+	transform: translate(0, -2px);
+	box-shadow: 5px 5px 1px #ccc;
+}
 
 .modal {
 	position: fixed; /* Stay in place */
@@ -299,9 +302,18 @@ nav.pagination-blog a {
 	display: flex;
 	align-items: center;
     gap: 5px;
+	border: 1px solid #001;
+    padding: 5px 10px;
+    border-radius: 5px;
+	transition: all 100ms ease-in;
+}
+nav.pagination-blog a:hover {
+	transform: translate(-2px, -2px);
+	background: #f2f2f2;
+	box-shadow: 10px 10px 1px #ccc;
 }
 nav.pagination-blog a svg {
-	transition: all 150ms ease-in;
+	transition: all 100ms ease-in;
 }
 nav.pagination-blog a:hover svg {
 	transform: scale(1.2);
