--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -2,6 +2,26 @@
 import { Icon } from 'astro-icon'
 const { navData, rightMenu } = Astro.props;
 import Container from '../components/Container.astro';
+
+export async function fetchData() {
+    try {
+      const response = await fetch('https://t2del-astro.instawp.xyz/wp-json/custom/v1/menu-header/');
+      if (response.ok) {
+        const data = await response.json();
+        // Now you can work with the 'data'
+        return data;
+      } else {
+        // Handle the case where the response is not OK (e.g., not found, unauthorized, etc.)
+        return { error: 'Error: Unable to fetch data' };
+      }
+    } catch (error) {
+      // Handle any network or fetch-related errors
+      return { error: 'An error occurred while fetching data: ' + error.message };
+    }
+  }
+const fetchedData = fetchData();
+const data = await fetchedData;
+
 ---
 <script type="module" >
   document.addEventListener('astro:page-load', () => {
@@ -79,6 +99,27 @@ import Container from '../components/Container.astro';
                 )}
               </li>
             ))}
+            {data.length > 0 && (
+              <li class="has-submenu">
+                <a href="#">Wordpress</a>
+                <ul class="sub-menu ">
+                  {data.map(navItem => (
+                  <li className={navItem.submenu ? 'has-submenu' : ''}>
+                    <a href={`./wp_blog/${navItem.slug}`}>{navItem.title}</a>
+                    {navItem.submenu && (
+                      <ul class="sub-menu ">
+                        {navItem.submenu.map(submenuItem => (
+                          <li>                           
+                            <a href={`./wp_blog/${submenuItem.slug}`}>{submenuItem.title}</a>
+                          </li>
+                        ))}
+                      </ul>
+                    )}
+                  </li>
+                ))}
+                </ul>
+              </li>
+            )}
           </ul>
         </nav>
       )}
