--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,16 +6,15 @@ import { getCollection, getEntry } from 'astro:content';
 import FormattedDate from '../components/FormattedDate.astro';
 import CustomModal from '../components/Modal.astro';
 
+
 // import CustomModal from '../components/ModalButton.astro';
 import { Image } from "astro:assets"
 import { Debug } from 'astro:components';
-import { ViewTransitions, fade, slide } from 'astro:transitions';
 
 	const posts_blog = (await getCollection('blog'))
 	.filter(post => post.data.status == 'active') // Filter out active posts
   	.sort((a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()).reverse()
 	.slice(0, 3); // Limit to the first 3 posts
-
 
 	const posts_project = (await getCollection('project'))
 	.sort((a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()).reverse();
@@ -69,21 +68,16 @@ import { ViewTransitions, fade, slide } from 'astro:transitions';
 				{
 					posts_project_featured.map((post) => (
 						<li class="notshow blur portfolio-list"  id={post.slug}>
-							<CustomModal title={post.data.title} slug={post.slug} classText="animate_underline" imgsrc={post.data.heroImage}  />
+							<CustomModal 
+								title={post.data.title} 
+								slug={post.slug} 
+								siteURL={post.data.siteUrl} 
+								classText="animate_underline" 
+								imgsrc={post.data.heroImage}
+								role={post.data.role}
+								platform={post.data.platform}
+							/>
 						</li>
-						// <div id={post.slug} class="modal">						
-						// 	<div class="modal-content" transition:animate={slide({ duration: '0.4s' })}>						
-						// 		<div class="modal-grid">									
-						// 			<div class="description">
-						// 				<p>{post.data.title}</p>
-						// 				<div>Role: <span>{post.data.role}</span></div>
-						// 				<div>Platform: <span>{post.data.platform}</span></div>
-						// 				<a href={post.data.siteUrl} rel="noopener noreferrer"><span>Visit Site</span></a>
-						// 			</div>
-						// 			<div class="img"><img  src={post.data.heroImage} alt={post.data.title}  title={post.data.title} /></div>
-						// 		</div>
-						// 	</div>
-						// </div>
 					))
 				}
 			</ul>
@@ -91,15 +85,23 @@ import { ViewTransitions, fade, slide } from 'astro:transitions';
 				{
 					posts_project.map((post) => {
 						if (post.data.status == 'active') {
-						return (
-						<li class="notshow blur portfolio-list"  id={post.slug}>
-							<CustomModal title={post.data.title} slug={post.slug} classText="animate_underline" imgsrc={post.data.heroImage}  />
-						</li>
-						);
+							return (
+								<li class="notshow blur portfolio-list"  id={post.slug}>
+									<CustomModal 
+										title={post.data.title} 
+										slug={post.slug}
+										siteURL={post.data.siteUrl} 
+										classText="animate_underline" 
+										imgsrc={post.data.heroImage}
+										role={post.data.role}
+										platform={post.data.platform}
+									/>
+								</li>
+							);
 						}
 						return null;
 					})
-					}
+				}
 			</ul>
 								
 		</Container>
