--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -158,6 +158,15 @@ span {
     margin: 10px;
     font-size: var(--font-size-sm);
   }
+  .btn-modal h3 {
+    display: none;
+    margin: 3px 10px;
+    font-size: var(--font-size-sm);
+  }
+  .btn-modal .display-on-modal {
+    display: none;
+	margin: 3px 10px;
+  }
 .btn-modal:hover {
 	transform: translate(0, -2px);
 	box-shadow: 5px 5px 1px #ccc;
@@ -227,8 +236,17 @@ span {
 
 .modal-show .btn-modal img {
 	width: 100%;
-    height: 300px;
+    height: 350px;
     object-fit: cover;
+}
+.portfolio-list.modal-show button {
+	padding-bottom: 10px;
+}
+.portfolio-list.modal-show .btn-modal h3, .portfolio-list.modal-show .btn-modal .display-on-modal {
+	display: inline;
+}
+.portfolio-list.modal-show .btn-modal h4 {
+	font-size: var(--font-size-base);
 }
 
 main {
