--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -105,12 +105,12 @@ const data = await fetchedData;
                 <ul class="sub-menu ">
                   {data.map(navItem => (
                   <li className={navItem.submenu ? 'has-submenu' : ''}>
-                    <a href={`./${navItem.slug}`}>{navItem.title}</a>
+                    <a href={`/t2delastro/${navItem.slug}`}>{navItem.title}</a>
                     {navItem.submenu && (
                       <ul class="sub-menu ">
                         {navItem.submenu.map(submenuItem => (
                           <li>                           
-                            <a href={`/${submenuItem.slug}`}>{submenuItem.title}</a>
+                            <a href={`/t2delastro/${submenuItem.slug}`}>{submenuItem.title}</a>
                           </li>
                         ))}
                       </ul>
