--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -28,7 +28,7 @@ header .content__container .header-logo-menu__container {
     justify-content: space-between;
 }
 header .content__container.container-header{
-  padding: 10px 10px;
+  padding: 0 10px;
 }
 
   header.header--right {
@@ -114,12 +114,13 @@ header .content__container.container-header{
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       position: fixed;
       inset: 0;
       z-index: 0;
       transition: all 300ms ease-in;
       opacity: 0;
+      padding-top: 60px;
     }
     header[mobile-menu-open] .header-nav__container {
       display: flex;
@@ -132,7 +133,7 @@ header .content__container.container-header{
       flex-direction: column;
     }
      header[mobile-menu-open] nav ul li {
-       font-size: var(--font-size-lg);
+       font-size: var(--font-size-md);
        margin-bottom: 1rem;
        text-align: center;
      }
