added contact form functionality

--- a/src/pages/contact-us.astro
+++ b/src/pages/contact-us.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Container from '../components/Container.astro';
-
+import ContactForm from '../components/forms/ContactForm.astro';
 
 if (Astro.request.method === "POST") {
   try {
@@ -18,50 +18,13 @@ if (Astro.request.method === "POST") {
   }
 }
 ---
-
-
 <Layout title="Contact Us | t2del" meta_description="t2del" body_class="contact-us">
 	<section id="contact-us">			
 		<Container className="container-contact-us">			
 			<div class="feedback-form">
 				<h2 class="notshow fromleft"> <span class="text-gradient">Contact Form</span></h2>
-				<iframe style="border:none;width:100%;" height="470px" src="https://opnform.com/forms/contact-us-h9p9jn"></iframe>
+				<ContactForm></ContactForm>
 			</div>		
-		</Container>					
+		</Container>						
 	</section>	
 </Layout>
-
-<style>
-	.feedback-form {
-	margin: 0 auto;
-	width: 100%;
-	min-width: 250px;
-	max-width: 450px;
-  }
-  input,
-  textarea,
-  button {
-	font-size: inherit;
-	margin: 15px 0;
-	padding: 12px 20px;
-	width: 100%;
-  }
-  button {
-	background-color: teal;
-	border: 1px solid black;
-	color: white;
-	width: 50%;
-  }
-  .hidden {
-	clip: rect(0 0 0 0);
-	clip-path: inset(50%);
-	height: 1px;
-	overflow: hidden;
-	position: absolute;
-	white-space: nowrap;
-	width: 1px;
-  }
-  iframe .text-center.w-full.mt-2 {
-	display: none;
-  }
-  </style>
