--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import HomeHeroSection from '../components/sections/heros/HomeHeroSection.astro'
 import { getCollection, getEntry } from 'astro:content';
 import FormattedDate from '../components/FormattedDate.astro';
 import CustomModal from '../components/Modal.astro';
-
+import ContactForm from '../components/forms/ContactForm.astro';
 
 // import CustomModal from '../components/ModalButton.astro';
 import { Image } from "astro:assets"
@@ -126,5 +126,15 @@ import { Debug } from 'astro:components';
 				}
 			</ul>				
 		</Container>			
+	</section>
+
+	<section id="contact-us">			
+		<Container className="container-contact-us">			
+			<div class="feedback-form">
+				<h2 class="notshow fromleft"> <span class="text-gradient">Contact Form</span></h2>
+				<ContactForm></ContactForm>
+			</div>		
+		</Container>
+							
 	</section>
 </Layout>
