--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,5 +4,6 @@
 @import url('./global.css');
 @import url('./transition.css');
 @import url('./header.css');
+@import url('./forms.css');
 @import url('./footer.css');
 @import url('./article.css');
