--- a/src/components/forms/ContactForm.astro
+++ b/src/components/forms/ContactForm.astro
@@ -6,7 +6,7 @@
   <label>Email:</label>
   <input type="email" name="email" placeholder="Email" />
   <label>Message:</label>
-  <textarea type="text" name="message" placeholder="Message" /></textarea>
+  <input type="text" name="message" placeholder="Message" />
   <button id="my-form-button">Submit</button>
   <p id="my-form-status"></p>
 </form>
