added ga tracking

--- a/src/layouts/BaseHead.astro
+++ b/src/layouts/BaseHead.astro
@@ -46,11 +46,15 @@ const { title, description, image = '/favicon.ico' } = Astro.props;
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
 
 
+<script is:inline src="https://www.googletagmanager.com/gtag/js?id=G-8GWLGV29V7"></script>
 <script type="module" >
 	document.addEventListener('astro:page-load', () => {
 		// <!-- paste GA4 Tracking here -->
-		console.log('paste GA4 Tracking here ');
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-8GWLGV29V7');
 		// <!-- paste GA4 Tracking here -->
 	}, ); 
 </script>
-
